--- a/index.html
+++ b/index.html
@@ -7,11 +7,38 @@
     <title>Portfolio</title>
   </head>
   <body>
-    <section id="welcome">
-      <h1></h1>
+    <nav id="navbar"></nav>
+    <section id="welcome-section">
+      <h1>Text.</h1>
     </section>
-    <section id="projects">
-      <title class="project-title"></title>
+    <section id="projects" class="project-tile">
+      <a
+        href="https://cityhuntertributepage.netlify.app/"
+        target="_blank"
+        rel="noopener noreferrer"
+        >city</a
+      >
     </section>
+    <footer>
+      <a
+        href="https://github.com/amandakibende"
+        target="_blank"
+        rel="noopener noreferrer"
+        id="profile-link"
+        >git</a
+      >
+      <a
+        href="https://www.freecodecamp.org/fccef15277a-111e-4da8-8a25-bac407d9c896"
+        target="_blank"
+        rel="noopener noreferrer"
+        >fcc</a
+      >
+      <a
+        href="https://fr.linkedin.com/in/amandakibendehotmailfr"
+        target="_blank"
+        rel="noopener noreferrer"
+      ></a>
+    </footer>
+    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
   </body>
 </html>
