--- a/index.html
+++ b/index.html
@@ -7,16 +7,22 @@
     <title>Portfolio</title>
   </head>
   <body>
-    <nav id="navbar"></nav>
+    <nav id="navbar">
+      <ul>
+        <li>Home</li>
+        <li>Work</li>
+        <li>About</li>
+    </nav>
     <section id="welcome-section">
-      <h1>Text.</h1>
+      <h1></h1>
+      
     </section>
     <section id="projects" class="project-tile">
       <a
         href="https://cityhuntertributepage.netlify.app/"
         target="_blank"
         rel="noopener noreferrer"
-        >city</a
+        >City Hunter</a
       >
     </section>
     <footer>
@@ -25,7 +31,7 @@
         target="_blank"
         rel="noopener noreferrer"
         id="profile-link"
-        >git</a
+        >GitHub</a
       >
       <a
         href="https://www.freecodecamp.org/fccef15277a-111e-4da8-8a25-bac407d9c896"
