update project section
change restaurant img
add <img> link element

--- a/index.html
+++ b/index.html
@@ -25,24 +25,26 @@
     <!--Projects sections-->
     <section id="projects" class="project-tile">
 
-      <div class="container-card">
-<div class="flex-card">
-  <a href="https://cityhuntertributepage.netlify.app/" target="_blank" rel="noopener noreferrer">City Hunter</a>
-</div>
+        <div class="container-card">
 
-<div class="flex-card">
-  <a href="https://bisgrow.netlify.app" target="_blank" rel="noopener noreferrer">Bisgrow</a>
+            <div class="flex-card" >
+             <a href="https://cityhuntertributepage.netlify.app/" target="_blank" rel="noopener noreferrer">
+              <img src="/img/city.jpg" alt="city hunter website image">
+            </a>
+            </div>
 
-</div>
-<div class="flex-card">
-  <a href="http://https://auntiegingerrestaurant.netlify.app" target="_blank" rel="noopener noreferrer">Auntie
-    Ginger</a>
-</div>
-      </div>
+           <div class="flex-card">
+            <a href="https://bisgrow.netlify.app" target="_blank" rel="noopener noreferrer">
+              <img src="/img/bisgrow.jpg" alt="bisgrow website image">
+           </a>
+           </div>
 
-      
-
-        
+           <div class="flex-card">
+            <a href="http://https://auntiegingerrestaurant.netlify.app" target="_blank" rel="noopener noreferrer">
+              <img src="/img/ginger.png" alt="restaurant website image">
+           </a>
+           </div>
+        </div>
 
     </section>
 
