update img size
crop and resize img

--- a/index.html
+++ b/index.html
@@ -27,23 +27,29 @@
 
         <div class="container-card">
 
-            <div class="flex-card" >
+            <div class="card" >
              <a href="https://cityhuntertributepage.netlify.app/" target="_blank" rel="noopener noreferrer">
-              <img src="/img/city.jpg" alt="city hunter website image">
+              <img src="/img/city.jpg" alt="website 1 image">
             </a>
             </div>
 
-           <div class="flex-card">
+           <div class="card">
             <a href="https://bisgrow.netlify.app" target="_blank" rel="noopener noreferrer">
-              <img src="/img/bisgrow.jpg" alt="bisgrow website image">
+              <img src="/img/bisgrow.jpg" alt="website 2 image">
            </a>
            </div>
 
-           <div class="flex-card">
+           <div class="card">
             <a href="http://https://auntiegingerrestaurant.netlify.app" target="_blank" rel="noopener noreferrer">
-              <img src="/img/ginger.png" alt="restaurant website image">
+              <img src="/img/ginger.png" alt="website 3 image">
            </a>
            </div>
+
+            <div class="card">
+              <a href="exquisite.netlify.app/" target="_blank" rel="noopener noreferrer">
+                <img src="/img/exquisite.jpg" alt="website 4 image">
+              </a>
+            </div>
         </div>
 
     </section>
