about section update add padding to right div to center my content add btn style in css

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <input
             type="submit"
             id="submit"
-            value="send"
+            value="Ask Me"
             class="input-btn"
           />
         </form>
